feat: add revenue pool contract and enhance vault functionality
- Introduced `callora-revenue-pool` contract for distributing USDC to developers.
- Updated `callora-vault` to support optional revenue pool and maximum deduct limit.
- Enhanced initialization and deduct methods in the vault to accommodate new features.
- Updated README and CI workflow to include the new revenue pool contract.
- Added tests for revenue pool functionality and updated vault tests for new parameters.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -64,3 +64,5 @@ jobs:
         run: |
           cd contracts/vault
           cargo build --target wasm32-unknown-unknown --release
+          cd ../revenue_pool
+          cargo build --target wasm32-unknown-unknown --release
