--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [workspace]
 resolver = "2"
-members = ["contracts/vault"]
+members = ["contracts/vault", "contracts/revenue_pool"]
 
 [workspace.dependencies]
 soroban-sdk = "22"
